public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_modal-popup.scss
// |--------------------------------------------------------------------------
// | Modal popups
// |--------------------------------------------------------------------------
// |
// | This file contains styles for the following:
// | - .header
// |

// --------------------------------------------------
// Variables
// --------------------------------------------------

// --------------------------------------------------
// Styling
// --------------------------------------------------

#modalContent {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  width: 100%;
  overflow-y: scroll;
  bottom: 0;
  right: 0;
}

div.ctools-modal-content {
  margin: 10% auto;
  background: transparent;
  border: 0;
  width: 80%;

  h1 {
    font-size: 3.5em;
  }

  .modal-content {
    border-radius: 0;
    padding: 20px 50px 50px;
    box-shadow: none;
    border: 0;

    .field-name-body {
      font-weight: bold;
    }
  }

  .popups-close {
    display: block;
    height: 70px;

    .close {
      height: 70px;
      width: 70px;
      display: block;
      background: $color-blue;
      padding: 10px 0;
      text-align: center;
      font-size: 3em;
      opacity: 1;
    }
  }
}
// --------------------------------------------------
// Variants
// --------------------------------------------------

// --------------------------------------------------
// Responsive
// --------------------------------------------------

// Mobile - and up
@include media-breakpoint-up(xs) {

}

// Mobile - only
@include media-breakpoint-only(xs) {

}

// Tablet - and up
@include media-breakpoint-up(sm) {

}

// Tablet - only
@include media-breakpoint-only(sm) {

}

// Desktop - and up
@include media-breakpoint-up(md) {
  //trick to mane menu clickable on the front page because of background slideshow

  div.ctools-modal-content {
    width: 970px;
  }

}

// Desktop - only
@include media-breakpoint-only(md) {

}

// Large desktop - and up
@include media-breakpoint-up(lg) {

}

// Print
@media print {

}

// Touch
.touchevents {

}

// No touch
.no-touchevents {

}

// --------------------------------------------------
// Mixins
// --------------------------------------------------

// Header mixin
@mixin header-mixin() {
}

